<?xml version="1.0"?>
<package format="2">
  <name>toroboeye_camera</name>
  <version>0.0.1</version>
  <description>The toroboeye_camera package</description>
  <maintainer email="please_contact_us_via_the_bugtracker_site_of_url_tag@dummy.address">Tokyo Robotics Inc.</maintainer>
  <url type="repository">https://github.com/tokyorobotics/toroboeye_ros</url>
  <url type="bugtracker">https://github.com/tokyorobotics/toroboeye_ros/issues</url>
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>toroboeye_msgs</depend>
  <export></export>
</package>
