<?xml version="1.0"?>
<package format="2">
  <name>toroboeye_description</name>
  <version>0.0.0</version>
  <description>The toroboeye_description package</description>
  <maintainer email="please_contact_us_via_the_bugtracker_site_of_url_tag@dummy.address">Tokyo Robotics Inc.</maintainer>
  <url type="repository">https://github.com/tokyorobotics/toroboeye_ros</url>
  <url type="bugtracker">https://github.com/tokyorobotics/toroboeye_ros/issues</url>
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export></export>
</package>
