<?xml version="1.0"?>
<package format="2">
  <name>toroboeye_msgs</name>
  <version>0.0.1</version>
  <description>The toroboeye_msgs package</description>
  <maintainer email="please_contact_us_via_the_bugtracker_site_of_url_tag@dummy.address">Tokyo Robotics Inc.</maintainer>
  <url type="repository">https://github.com/tokyorobotics/toroboeye_ros</url>
  <url type="bugtracker">https://github.com/tokyorobotics/toroboeye_ros/issues</url>
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_export_depend> message_runtime </build_export_depend>
  <exec_depend> message_runtime </exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export></export>
</package>
