<?xml version="1.0"?>
<package format="2">
  <name>toroboeye_ros</name>
  <version>0.0.0</version>
  <description>The toroboeye_ros package</description>
  <maintainer email="please_contact_us_via_the_bugtracker_site_of_url_tag@dummy.address">Tokyo Robotics Inc.</maintainer>
  <url type="repository">https://github.com/tokyorobotics/toroboeye_ros</url>
  <url type="bugtracker">https://github.com/tokyorobotics/toroboeye_ros/issues</url>
  <license>BSD3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
